regression/verilog/syntax-errors/syntax2.sv
module main // forgot the ;

byte some_var;

endmodule

